--- a/Website/frontend/src/index.css
+++ b/Website/frontend/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.scroll {
+  max-height: 400px;
+  overflow-y: scroll;
+}
